Fixed jump button & style class

--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -542,7 +542,7 @@ img {
     }
 
     .storys {
-        font-size: 0.625rem;
+        font-size: 0.75rem;
     }
 
     .storys2 {
